--- a/app/src/main/res/layout/activity_todo_final_edit.xml
+++ b/app/src/main/res/layout/activity_todo_final_edit.xml
@@ -7,6 +7,9 @@
         <variable
             name="vm"
             type="com.heechan.membeder.ui.team.caleander.TodoEditViewModel" />
+        <variable
+            name="singleton"
+            type="com.heechan.membeder.ui.SingletonObject" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -44,13 +47,10 @@
             android:id="@+id/edt_scheduleName_name"
             style="@style/edt_icon_style"
             android:layout_width="350sp"
-
             android:layout_height="60sp"
             android:layout_marginTop="20dp"
 
             android:hint="제목을 입력해주세요"
-            android:text="@={vm.name}"
-
             android:drawableStart="@drawable/ic_check"
 
             app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +65,6 @@
             android:layout_marginTop="20dp"
 
             android:hint="내용을 입력해주세요"
-            android:text="@={vm.name}"
 
             android:drawableStart="@drawable/ic_segment"
 
@@ -81,7 +80,6 @@
             android:layout_marginTop="20dp"
 
             android:hint="날짜를 입력해주세요"
-            android:text="@={vm.name}"
 
             android:drawableStart="@drawable/ic_calsender"
 
