--- a/app/src/main/res/layout/activity_todo_delete.xml
+++ b/app/src/main/res/layout/activity_todo_delete.xml
@@ -1,9 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.team.caleander.TodoDeleteActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <data>
+        <variable
+            name="vm"
+            type="com.heechan.membeder.ui.team.caleander.TodoDeleteViewModel" />
+
+        <variable
+            name="singleton"
+            type="com.heechan.membeder.ui.SingletonObject" />
+
+    </data>
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        bindSwipeOnRefresh="@{vm::getTeamData}"
+        bindSwipeRefreshing="@{vm.state}"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".ui.team.caleander.TodoDeleteActivity">
+
+            <com.heechan.membeder.ui.view.header.NavigationHeader
+                android:id="@+id/hd_TodoEditTitle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                app:layout_constraintEnd_toEndOf="parent"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:navigationTitle="할일 삭제" />
+
+            <TextView
+                android:id="@+id/txt_caleanderedit_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
+                android:text="현재 진행중인 일정"
+
+                android:textFontWeight="700"
+                android:textSize="15sp"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/hd_TodoEditTitle" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_teamBuilding_teamList"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                bindTeamScheduleListDelite="@{singleton.selectTeam.schedule}"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txt_caleanderedit_title"
+                app:layout_constraintVertical_bias="1.0"
+                tools:listitem="@layout/row_schedule_list3" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+</layout>
