--- a/app/src/main/res/layout/authoritymanage_item.xml
+++ b/app/src/main/res/layout/authoritymanage_item.xml
@@ -10,6 +10,10 @@
         <variable
             name="isOwner"
             type="Boolean" />
+        <variable
+            name="isChecked"
+            type="Boolean" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -55,7 +59,7 @@
         <Switch
             android:id="@+id/sw_item_OnOff"
             bindVisibility="@{isOwner}"
-            android:checked="true"
+            android:checked="@{isChecked}"
             android:layout_width="52dp"
             android:layout_height="28dp"
             android:layout_marginEnd="24dp"
