--- a/app/src/main/res/layout/fragment_sign_up_1.xml
+++ b/app/src/main/res/layout/fragment_sign_up_1.xml
@@ -176,6 +176,20 @@
                 app:layout_constraintEnd_toEndOf="@id/line_signUp1_end"
                 app:layout_constraintStart_toStartOf="@id/line_signUp1_start" />
 
+            <Button
+                android:id="@+id/btn_signUp1_profileImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="이미지 선택"
+
+                android:layout_marginTop="12dp"
+
+                app:layout_constraintTop_toBottomOf="@id/edt_signUp1_passwordCheck"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </layout>
