Profile, Chat profile image

--- a/app/src/main/res/layout/row_chatlist_onther.xml
+++ b/app/src/main/res/layout/row_chatlist_onther.xml
@@ -45,6 +45,7 @@
             android:layout_height="28dp"
 
             android:src="@drawable/heechan"
+            bindSrcUrl="@{userData.profileImg}"
             app:layout_constraintBottom_toBottomOf="@id/txt_chatListOther_message"
 
             app:layout_constraintStart_toStartOf="parent"
