--- a/app/src/main/res/layout/fragment_contest.xml
+++ b/app/src/main/res/layout/fragment_contest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="vm"
+            type="com.heechan.membeder.ui.main.ContestViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -13,15 +15,31 @@
         tools:context=".ui.main.ContestFragment">
 
         <TextView
+            android:id="@+id/tv_contest_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:text="Contest Fragment"
-
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/suit_bold"
+            android:text="대회"
+            android:textColor="#1D1D1D"
+            android:textSize="22sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
+        <ScrollView
+            android:id="@+id/sv_contest"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_contest_title">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_contest_main"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="24dp"
+                tools:listitem="@layout/row_contest_item" />
+        </ScrollView>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
