--- a/app/src/main/res/layout/activity_main_team_manage.xml
+++ b/app/src/main/res/layout/activity_main_team_manage.xml
@@ -176,6 +176,41 @@
         app:layout_constraintEnd_toEndOf="parent"
 
         app:layout_constraintBottom_toBottomOf="@id/txt_caleandermanage_delete" />
+    <TextView
+        android:id="@+id/txt_onother_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/txt_caleandermanage_delete"
+        android:textSize="20sp"
+        android:text="그 외"
+        android:textFontWeight="700"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="24sp"
+        android:layout_marginTop="32sp" />
+    <TextView
+        android:id="@+id/txt_other_profileEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/txt_onother_title"
+        android:textSize="20sp"
+        android:text="팀 프로필 수정"
+        android:textFontWeight="500"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="24sp"
+        android:layout_marginTop="27sp" />
+
+
+    <ImageView
+        android:layout_marginEnd="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:src="@drawable/ic_arrow_right"
+
+        app:layout_constraintTop_toTopOf="@id/txt_other_profileEdit"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintBottom_toBottomOf="@id/txt_other_profileEdit" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
