--- a/app/src/main/res/layout/activity_main_team_manage.xml
+++ b/app/src/main/res/layout/activity_main_team_manage.xml
@@ -23,18 +23,42 @@
         app:layout_constraintTop_toTopOf="parent"
         app:navigationTitle="팀 관리" />
 
+    <TextView
+        android:id="@+id/txt_membermanage_memberrecruitmentswitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/hd_teamBuilding"
+        android:textSize="20sp"
+        android:text="멤버 모집"
+        android:textFontWeight="500"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="24sp"
+        android:layout_marginTop="27sp" />
+
+    <Switch
+        android:id="@+id/sw_item_OnOff"
+        android:checked="false"
+        android:layout_width="52dp"
+        android:layout_height="28dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintTop_toTopOf="@+id/txt_membermanage_memberrecruitmentswitch"
+        app:layout_constraintBottom_toBottomOf="@+id/txt_membermanage_memberrecruitmentswitch"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:thumb="@drawable/switch_thumb"
+        android:track="@drawable/switch_track" />
+
 
     <TextView
         android:id="@+id/txt_membermanage_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/hd_teamBuilding"
+        app:layout_constraintTop_toBottomOf="@id/txt_membermanage_memberrecruitmentswitch"
         android:textSize="20sp"
         android:text="멤버 관리"
         android:textFontWeight="700"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="24sp"
-        android:layout_marginTop="32sp" />
+        android:layout_marginTop="27sp" />
 
     <TextView
         android:id="@+id/txt_membermanage_memberrecruitment"
@@ -211,6 +235,32 @@
         app:layout_constraintEnd_toEndOf="parent"
 
         app:layout_constraintBottom_toBottomOf="@id/txt_other_profileEdit" />
+
+    <TextView
+        android:id="@+id/txt_other_NoticeSetting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/txt_other_profileEdit"
+        android:textSize="20sp"
+        android:text="공지 설정"
+        android:textFontWeight="500"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="24sp"
+        android:layout_marginTop="27sp" />
+
+
+    <ImageView
+        android:id="@+id/btn_other_NoticeSetting"
+        android:layout_marginEnd="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:src="@drawable/ic_arrow_right"
+
+        app:layout_constraintTop_toTopOf="@id/txt_other_NoticeSetting"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintBottom_toBottomOf="@id/txt_other_NoticeSetting" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
