--- a/app/src/main/res/layout/activity_team_detail.xml
+++ b/app/src/main/res/layout/activity_team_detail.xml
@@ -48,6 +48,7 @@
             android:layout_height="wrap_content"
 
             android:src="@drawable/membeder_banner"
+            bindSrcUrl="@{vm.teamData.image}"
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
