--- a/app/src/main/res/layout/authoritymanage_item.xml
+++ b/app/src/main/res/layout/authoritymanage_item.xml
@@ -25,6 +25,8 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="24dp"
+
+            bindSrcUrl="@{userData.profileImg}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
