--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -4,11 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="vm"
             type="com.heechan.membeder.ui.main.MoreViewModel" />
-
         <variable
             name="singleton"
             type="com.heechan.membeder.ui.SingletonObject" />
@@ -64,7 +62,9 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@{singleton.userData.profileImg}" />
+                bindSrcUrl="@{singleton.userData.profileImg}"
+                android:src="@drawable/heechan"
+                />
         </androidx.cardview.widget.CardView>
 
         <TextView
