--- a/app/src/main/res/layout/fragment_sign_up_9.xml
+++ b/app/src/main/res/layout/fragment_sign_up_9.xml
@@ -117,9 +117,10 @@
                         android:id="@+id/img_signup9_previewProfileImage"
                         bindSrcUri="@{vm.profileImage}"
                         android:layout_width="48dp"
-
                         android:layout_height="48dp"
+
                         android:layout_gravity="center"
+                        android:scaleType="centerCrop"
 
                         android:src="@drawable/ic_image_select"
                         app:layout_constraintEnd_toEndOf="parent"
