--- a/app/src/main/res/layout/row_team_building_list_item.xml
+++ b/app/src/main/res/layout/row_team_building_list_item.xml
@@ -16,28 +16,31 @@
         android:paddingHorizontal="24dp"
         android:paddingVertical="16dp">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/img_teamSelect_teamLogo"
+            bindSrcUrl="@{teamData.image}"
+            android:scaleType="centerCrop"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/team_membeder"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/cornerSize10Percent" />
 
         <TextView
             android:id="@+id/txt_teamSelect_teamName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:text="@{teamData.name}"
-            tools:text="멤비더 오피셜"
-            android:textSize="15sp"
-            android:textFontWeight="600"
-
             android:layout_marginStart="12dp"
+            android:text="@{teamData.name}"
+            android:textFontWeight="600"
+            android:textSize="15sp"
 
             app:layout_constraintStart_toEndOf="@+id/img_teamSelect_teamLogo"
-            app:layout_constraintTop_toTopOf="@id/img_teamSelect_teamLogo" />
+
+            app:layout_constraintTop_toTopOf="@id/img_teamSelect_teamLogo"
+            tools:text="멤비더 오피셜" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -45,10 +48,9 @@
 
             android:src="@drawable/ic_arrow_right"
 
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
