--- a/app/src/main/res/layout/row_team_join_request_list.xml
+++ b/app/src/main/res/layout/row_team_join_request_list.xml
@@ -20,15 +20,19 @@
         android:paddingHorizontal="24dp"
         android:paddingVertical="12dp">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/img_userRequestItem_profile"
+            bindSrcUrl="@{userData.profileImg}"
             android:layout_width="40dp"
-            android:layout_height="40dp"
 
+            android:layout_height="40dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/team_membeder"
 
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/cornerSize10Percent" />
 
         <TextView
             android:id="@+id/txt_userRequestItem_nickname"
