Feat : Contest Detail

--- a/app/src/main/res/layout/fragment_contest.xml
+++ b/app/src/main/res/layout/fragment_contest.xml
@@ -35,8 +35,9 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_contest_main"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:layout_marginTop="24dp"
+                android:layout_marginBottom="60dp"
                 tools:listitem="@layout/row_contest_item" />
         </ScrollView>
 
