--- a/app/src/main/res/layout/activity_contest_detail.xml
+++ b/app/src/main/res/layout/activity_contest_detail.xml
@@ -21,6 +21,7 @@
             android:layout_height="match_parent"
             android:background="#FFFFFF"
             tools:context=".ui.main.ContestDetailActivity">
+
             <com.heechan.membeder.ui.view.header.NavigationHeader
                 android:id="@+id/hd_contestDetail"
                 android:layout_width="0dp"
@@ -31,6 +32,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:navigationTitle="대회 상세" />
+
             <TextView
                 android:id="@+id/tv_contestdetail_title"
                 android:layout_width="match_parent"
@@ -54,7 +56,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="32dp"
-                android:layout_marginBottom="12dp"
                 android:fontFamily="@font/suit_bold"
                 android:text="대회 포스터"
                 android:textColor="#1D1D1D"
@@ -66,6 +67,7 @@
                 android:id="@+id/iv_contestdetail_poster"
                 android:layout_width="match_parent"
                 android:layout_height="507dp"
+                android:layout_marginTop="12dp"
                 app:layout_constraintTop_toBottomOf="@id/tv_contestdetail_poster" />
 
             <Button
@@ -131,6 +133,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="24dp"
                 android:fontFamily="@font/suit_regular"
                 android:text="@{vm.contestPrize}"
@@ -159,15 +162,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="24dp"
+                android:layout_marginBottom="72dp"
                 android:fontFamily="@font/suit_regular"
                 android:text="@{vm.contestTarget}"
                 android:textColor="#313040"
                 android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_contestdetail_target"
-                android:layout_marginBottom="72dp"/>
+                app:layout_constraintTop_toBottomOf="@id/tv_contestdetail_target" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:background="#FFFFFF"
+                app:layout_constraintTop_toBottomOf="@id/tv_contestdetail_targetrank" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </layout>
