--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -18,175 +18,11 @@
         android:background="?attr/weight_backgroundColor"
         tools:context=".ui.main.MoreFragment">
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/line_more_start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:orientation="vertical"
-
-            app:layout_constraintGuide_begin="@dimen/app_padding_hr" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/line_more_end"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:orientation="vertical"
-
-            app:layout_constraintGuide_end="@dimen/app_padding_hr" />
-
-        <TextView
-            android:id="@+id/tv_more_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="52dp"
-            android:fontFamily="@font/suit_bold"
-            android:text="마이페이지"
-            android:textColor="#1D1D1D"
-            android:textSize="15sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_more_profile"
-            android:layout_width="72dp"
-            android:layout_height="72dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="36dp"
-            app:cardCornerRadius="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_more_title">
-
-            <ImageView
-                android:id="@+id/iv_more_profile"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                bindSrcUrl="@{singleton.userData.profileImg}"
-                android:src="@drawable/heechan"
-                />
-        </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:id="@+id/tv_more_teamtitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="59dp"
-            android:layout_marginTop="15dp"
-            android:fontFamily="@font/suit_bold"
-            android:text="참여한 팀"
-            android:textColor="#B7B7B7"
-            android:textSize="13sp"
-            app:layout_constraintStart_toEndOf="@id/card_more_profile"
-            app:layout_constraintTop_toTopOf="@id/card_more_profile" />
-
-        <TextView
-            android:id="@+id/tv_more_teamcount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="@{singleton.userTeamCount.toString()}"
-            android:textColor="#313040"
-            android:textSize="17sp"
-            android:fontFamily="@font/suit_bold"
-            app:layout_constraintBottom_toBottomOf="@id/card_more_profile"
-            app:layout_constraintEnd_toEndOf="@id/tv_more_teamtitle"
-            app:layout_constraintStart_toStartOf="@id/tv_more_teamtitle"
-            app:layout_constraintTop_toBottomOf="@id/tv_more_teamtitle" />
-
-        <TextView
-            android:id="@+id/tv_more_portfoliotitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/suit_bold"
-            android:text="포트폴리오"
-            android:textColor="#B7B7B7"
-            android:textSize="13sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/tv_more_teamtitle"
-            app:layout_constraintTop_toTopOf="@id/tv_more_teamtitle" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/suit_bold"
-            android:text="13"
-            android:textSize="17sp"
-            app:layout_constraintBottom_toBottomOf="@id/card_more_profile"
-            app:layout_constraintEnd_toEndOf="@id/tv_more_portfoliotitle"
-            app:layout_constraintStart_toStartOf="@id/tv_more_portfoliotitle"
-            app:layout_constraintTop_toBottomOf="@id/tv_more_teamtitle" />
-
-        <TextView
-            android:id="@+id/tv_more_profession"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:fontFamily="@font/suit_bold"
-            android:text="@{singleton.userData.profession}"
-            android:textColor="#B7B7B7"
-            android:textSize="13sp"
-            app:layout_constraintStart_toStartOf="@id/card_more_profile"
-            app:layout_constraintTop_toBottomOf="@id/card_more_profile" />
-
-        <TextView
-            android:id="@+id/tv_more_nickname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/suit_medium"
-            android:text="@{singleton.userData.nickname}"
-            android:textColor="#1D1D1D"
-            android:textSize="15sp"
-            app:layout_constraintStart_toStartOf="@id/card_more_profile"
-            app:layout_constraintTop_toBottomOf="@id/tv_more_profession" />
-
-        <TextView
-            android:id="@+id/tv_more_introduce"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/suit_medium"
-            android:text="@{singleton.userData.introduce}"
-            android:textColor="#313040"
-            android:textSize="13sp"
-            app:layout_constraintStart_toStartOf="@id/card_more_profile"
-            app:layout_constraintTop_toBottomOf="@id/tv_more_nickname" />
-
-        <View
-            android:id="@+id/view_more_line"
+        <FrameLayout
+            android:id="@+id/fl_more_profile"
             android:layout_width="match_parent"
-            android:layout_height="16dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_more_introduce"
-            android:layout_marginTop="16dp"
-            android:background="#F4F4F4" />
-
-        <TextView
-            android:id="@+id/tv_more_nowteam"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="참여한 팀"
-            android:textSize="15sp"
-            app:layout_constraintTop_toBottomOf="@id/view_more_line"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="24dp"
-            android:layout_marginStart="24dp"
-            android:fontFamily="@font/suit_bold"
-            android:textColor="#1D1D1D" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_more_team"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_more_nowteam"
-            tools:listitem="@layout/row_team_select_list_item" />
+            android:layout_height="match_parent"
+            />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
